# edg-plugins

./: .gitignore  Makefile  README.md  go.mod  plugin.go  wasm.go
.github/workflows/: release.yml
_examples/: README.md  crdb.edg
_examples/go_example/: main.go
_examples/rust_example/: Cargo.toml
_examples/rust_example/src/: lib.rs
_examples/zig_example/: build.zig  build.zig.zon
_examples/zig_example/src/: main.zig
go/: go.mod  wasm_exports.go
rust/: Cargo.toml
rust/src/: lib.rs
zig/: build.zig  build.zig.zon
zig/src/: edg.zig
