[package]
name = "edg-plugin"
version = "0.2.0"
edition = "2021"
description = "SDK for writing edg plugins in Rust (WASM)"
license = "MIT"
repository = "https://github.com/codingconcepts/edg-plugins"
keywords = ["edg", "wasm", "plugin"]
categories = ["wasm"]
readme = "../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
